storage/innobase/srv/srv0start.cc
@@ -171,7 +171,9 @@ static void delete_log_files()
 @return DB_SUCCESS or error code */
 static dberr_t create_log_file(bool create_new_db, lsn_t lsn)
 {
+	ut_ad(log_sys.latch_have_wr());
 	ut_ad(!srv_read_only_mode);
+	ut_ad(!buf_pool.get_oldest_modification(0));
 
 	/* We will retain ib_logfile0 until we have written a new logically
 	empty log as ib_logfile101 and atomically renamed it to
@@ -179,9 +181,6 @@ static dberr_t create_log_file(bool create_new_db, lsn_t lsn)
 	delete_log_files();
 
 	ut_ad(!os_aio_pending_reads());
-	ut_d(mysql_mutex_lock(&buf_pool.flush_list_mutex));
-	ut_ad(!buf_pool.get_oldest_modification(0));
-	ut_d(mysql_mutex_unlock(&buf_pool.flush_list_mutex));
 	/* os_aio_pending_writes() may hold here if some
 	write_io_callback() did not release the slot yet.  However,
 	the page write itself must have completed, because the
@@ -190,7 +189,6 @@ static dberr_t create_log_file(bool create_new_db, lsn_t lsn)
 	assumption does not hold. */
 	ut_d(os_aio_wait_until_no_pending_writes(false));
 
-	log_sys.latch.wr_lock(SRW_LOCK_CALL);
 	log_sys.set_capacity();
 
 	std::string logfile0{get_log_file_path("ib_logfile101")};
@@ -206,6 +204,7 @@ static dberr_t create_log_file(bool create_new_db, lsn_t lsn)
 				int(logfile0.size()), logfile0.data());
 err_exit:
 		log_sys.latch.wr_unlock();
+		mysql_mutex_unlock(&buf_pool.flush_list_mutex);
 		return DB_ERROR;
 	}
 
@@ -221,14 +220,6 @@ close_and_exit:
 	log_sys.set_latest_format(srv_encrypt_log);
 	if (!log_sys.attach(file, srv_log_file_size)) {
 		goto close_and_exit;
-	}
-
-	mysql_mutex_lock(&recv_sys.mutex);
-	const bool all_opened = fil_system.sys_space->open(create_new_db);
-	mysql_mutex_unlock(&recv_sys.mutex);
-
-	if (!all_opened) {
-		goto err_exit;
 	}
 
 	/* Create a log checkpoint. */
@@ -255,6 +246,7 @@ close_and_exit:
 	buf_page_t::read_complete(). */
 	recv_sys.recovery_on = false;
 	log_sys.latch.wr_unlock();
+	mysql_mutex_unlock(&buf_pool.flush_list_mutex);
 
 	log_make_checkpoint();
 	log_buffer_flush_to_disk();
@@ -1068,15 +1060,19 @@ srv_init_abort_low(
 
 /** Prepare to delete the redo log file. Flush the dirty pages from all the
 buffer pools.  Flush the redo log buffer to the redo log file.
-@return lsn upto which data pages have been flushed. */
-static lsn_t srv_prepare_to_delete_redo_log_file() noexcept
+@return lsn upto which data pages have been flushed and log_sys.latch acquired
+@retval 0 in case of error; log_sys.latch will not be acquired */
+static ATTRIBUTE_COLD lsn_t srv_prepare_to_delete_redo_log_file() noexcept
 {
   DBUG_ENTER("srv_prepare_to_delete_redo_log_file");
 
+  mysql_mutex_lock(&recv_sys.mutex);
   ut_ad(recv_sys.recovery_on);
+  recv_sys.apply(true);
+  mysql_mutex_unlock(&recv_sys.mutex);
 
   /* Clean the buffer pool. */
-  buf_flush_sync();
+  buf_flush_sync_batch(LSN_MAX);
 
   DBUG_EXECUTE_IF("innodb_log_abort_1", DBUG_RETURN(0););
   DBUG_PRINT("ib_log", ("After innodb_log_abort_1"));
@@ -1084,21 +1080,6 @@ static lsn_t srv_prepare_to_delete_redo_log_file() noexcept
   log_sys.latch.wr_lock(SRW_LOCK_CALL);
   const bool latest_format{log_sys.is_latest()};
   lsn_t flushed_lsn{log_sys.get_flushed_lsn(std::memory_order_relaxed)};
-
-  if (latest_format && !(log_sys.file_size & 4095) &&
-      flushed_lsn != log_sys.next_checkpoint_lsn +
-      (log_sys.is_encrypted()
-       ? SIZE_OF_FILE_CHECKPOINT + 8
-       : SIZE_OF_FILE_CHECKPOINT))
-  {
-#ifdef HAVE_PMEM
-    if (!log_sys.is_opened())
-      log_sys.buf_size= unsigned(std::min<uint64_t>(log_sys.capacity(),
-                                                    log_sys.buf_size_max));
-#endif
-    fil_names_clear(flushed_lsn);
-    flushed_lsn= log_sys.get_lsn();
-  }
 
   {
     const char *msg;
@@ -1130,18 +1111,6 @@ same_size:
                  << "; LSN=" << flushed_lsn;
     }
   }
-
-  log_sys.latch.wr_unlock();
-
-  if (latest_format)
-    log_write_up_to(flushed_lsn, false);
-
-  ut_ad(flushed_lsn == log_get_lsn());
-  ut_ad(!os_aio_pending_reads());
-  ut_d(mysql_mutex_lock(&buf_pool.flush_list_mutex));
-  ut_ad(!buf_pool.get_oldest_modification(0));
-  ut_d(mysql_mutex_unlock(&buf_pool.flush_list_mutex));
-  ut_d(os_aio_wait_until_no_pending_writes(false));
 
   DBUG_RETURN(flushed_lsn);
 }
@@ -1381,6 +1350,8 @@ dberr_t srv_start(bool create_new_db)
 
 	if (create_new_db) {
 		lsn_t flushed_lsn = log_sys.init_lsn();
+		log_sys.latch.wr_lock(SRW_LOCK_CALL);
+		mysql_mutex_lock(&buf_pool.flush_list_mutex);
 
 		err = create_log_file(true, flushed_lsn);
 
@@ -1469,8 +1440,6 @@ dberr_t srv_start(bool create_new_db)
 		if (err != DB_SUCCESS) {
 			return(srv_init_abort(err));
 		}
-
-		buf_flush_sync();
 
 		ut_ad(!srv_log_file_created);
 		ut_d(srv_log_file_created= true);
@@ -1578,17 +1547,16 @@ dberr_t srv_start(bool create_new_db)
 		} else {
 			/* Prepare to delete the old redo log file */
 			const lsn_t lsn{srv_prepare_to_delete_redo_log_file()};
-
-			DBUG_EXECUTE_IF("innodb_log_abort_1",
-					return(srv_init_abort(DB_ERROR)););
+			if (!lsn) {
+				return srv_init_abort(DB_ERROR);
+			}
+			mysql_mutex_lock(&buf_pool.flush_list_mutex);
+			ut_ad(!buf_pool.get_oldest_modification(0));
 			/* Prohibit redo log writes from any other
 			threads until creating a log checkpoint at the
 			end of create_log_file(). */
 			ut_d(recv_no_log_write = true);
 			ut_ad(!os_aio_pending_reads());
-			ut_d(mysql_mutex_lock(&buf_pool.flush_list_mutex));
-			ut_ad(!buf_pool.get_oldest_modification(0));
-			ut_d(mysql_mutex_unlock(&buf_pool.flush_list_mutex));
 			/* os_aio_pending_writes() may hold here if
 			some write_io_callback() did not release the
 			slot yet. However, the page write itself must
@@ -1602,6 +1570,9 @@ dberr_t srv_start(bool create_new_db)
 			log_sys.close_file();
 
 			DBUG_EXECUTE_IF("innodb_log_abort_5",
+					log_sys.latch.wr_unlock();
+					mysql_mutex_unlock(
+						&buf_pool.flush_list_mutex);
 					return(srv_init_abort(DB_ERROR)););
 			DBUG_PRINT("ib_log", ("After innodb_log_abort_5"));
 
